# ogl_mastery

./: .gitignore  CMakeLists.txt
cmake/: deps.cmake
glad_src/include/glad/: gl.h  glad.h
module01_gpu_pipeline/: CMakeLists.txt  README.md
module01_gpu_pipeline/src/: query_gpu_info.cpp
module02_hello_triangle/: CMakeLists.txt  README.md
module02_hello_triangle/shaders/: triangle.frag  triangle.vert
module02_hello_triangle/src/: main.cpp
module03_glsl_deep/: CMakeLists.txt  README.md
module03_glsl_deep/include/: ubo_helper.h
module03_glsl_deep/shaders/: demo.frag  demo.vert
module03_glsl_deep/src/: main.cpp  ubo_helper.cpp
module04_linear_algebra/: CMakeLists.txt  README.md
module04_linear_algebra/include/: math_vis.h
module04_linear_algebra/shaders/: simple.frag  simple.vert
module04_linear_algebra/src/: main.cpp  math_vis.cpp
module05_transforms/: CMakeLists.txt  README.md
module05_transforms/include/: mesh.h  shader.h
module05_transforms/shaders/: mvp.frag  mvp.vert
module05_transforms/src/: main.cpp  mesh.cpp  shader.cpp
module06_camera/: CMakeLists.txt  README.md
module06_camera/include/: camera.h  frustum.h
module06_camera/shaders/: scene.frag  scene.vert
module06_camera/src/: camera.cpp  frustum.cpp  main.cpp
module07_texture/: CMakeLists.txt  README.md
module07_texture/include/: shader.h  texture.h
module07_texture/shaders/: texture.frag  texture.vert
module07_texture/src/: gen_test_textures.cpp  main.cpp  texture.cpp
module08_lighting/: CMakeLists.txt  README.md
module08_lighting/shaders/: light_cube.frag  light_cube.vert  phong.frag  phong.vert
module08_lighting/src/: main.cpp
module09_normal_maps/: CMakeLists.txt  README.md
module09_normal_maps/include/: mesh.h  mesh_tbn.h  tangent_calculator.h  texture.h
module09_normal_maps/shaders/: normal_map.frag  normal_map.vert
module09_normal_maps/src/: main.cpp  tangent_calculator.cpp  texture.cpp
module10_shadow/: CMakeLists.txt  README.md
module10_shadow/include/: shadow_map.h
module10_shadow/shaders/: shadow_depth.frag  shadow_depth.vert  shadow_lighting.frag  shadow_lighting.vert
module10_shadow/src/: main.cpp  shadow_map.cpp
module11_framebuffer/: CMakeLists.txt  README.md
module11_framebuffer/include/: framebuffer.h
module11_framebuffer/shaders/: bloom_bright.frag  bloom_composite.frag  blur_horizontal.frag  blur_vertical.frag  fullscreen.vert  hdr_scene.frag  hdr_scene.vert  postprocess.frag  tonemap.frag
module11_framebuffer/src/: framebuffer.cpp  main.cpp
module12_deferred/: CMakeLists.txt  README.md
module12_deferred/include/: gbuffer.h  ssao.h
module12_deferred/shaders/: deferred_lighting.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  ssao.frag  ssao_blur.frag
module12_deferred/src/: gbuffer.cpp  main.cpp  ssao.cpp
module13_pbr/: CMakeLists.txt  README.md
module13_pbr/include/: brdf_lut.h  cubemap.h
module13_pbr/shaders/: brdf_lut.frag  equirect_to_cubemap.frag  equirect_to_cubemap.vert  irradiance_conv.frag  pbr.frag  pbr.vert  prefilter_env.frag  skybox.frag  skybox.vert
module13_pbr/src/: brdf_lut.cpp  cubemap.cpp  main.cpp
module14_advanced_gl/: CMakeLists.txt  README.md
module14_advanced_gl/include/: indirect_draw.h  instance_renderer.h  ubo_manager.h
module14_advanced_gl/shaders/: instanced.frag  instanced.vert  orbit_update.comp  ubo_demo.frag  ubo_demo.vert
module14_advanced_gl/src/: indirect_draw.cpp  instance_renderer.cpp  main.cpp  ubo_manager.cpp
module15_particles/: CMakeLists.txt  README.md
module15_particles/docs/: README.md
module15_particles/include/: particle_system.h
module15_particles/shaders/: particle.frag  particle.vert  particle_update.comp
module15_particles/src/: main.cpp  particle_system.cpp
module16_yuv_renderer/: CMakeLists.txt  README.md
module16_yuv_renderer/docs/: README.md
module16_yuv_renderer/include/: yuv_renderer.h
module16_yuv_renderer/shaders/: yuv.frag  yuv.vert
module16_yuv_renderer/src/: main.cpp  test_frame_gen.h  yuv_renderer.cpp
module17_scene_editor/: CMakeLists.txt  README.md
module17_scene_editor/docs/: README.md
module17_scene_editor/include/: components.h  ecs.h  gltf_loader.h  picking.h
module17_scene_editor/shaders/: picking.frag  picking.vert  scene.frag  scene.vert
module17_scene_editor/src/: gltf_loader.cpp  main.cpp  picking.cpp
module18_raytracing_intro/: CMakeLists.txt  README.md
module18_raytracing_intro/docs/: README.md
module18_raytracing_intro/shaders/: fullscreen.vert  fullscreen_tonemap.frag  raytracer.comp
module18_raytracing_intro/src/: main.cpp
